--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,7 @@ sudo: false
 install:
   - git clone --depth=1 https://github.com/thinca/vim-themis /tmp/themis
   - git clone https://github.com/vim/vim $HOME/vim
-  - (if ! test -d $HOME/vim-8.0.0000/bin; then cd $HOME/vim && git checkout . && git checkout v8.0.0000 && ./configure --prefix=$HOME/vim-8.0.0000 && make && make install; fi)
-  - (if ! test -d $HOME/vim-7.4.1151/bin; then cd $HOME/vim && git checkout . && git checkout v7.4.1151 && ./configure --prefix=$HOME/vim-7.4.1151 && make && make install; fi)
+  - (if ! test -d $HOME/vim-$VIM_VERSION/bin; then cd $HOME/vim && git checkout . && git checkout v$VIM_VERSION && ./configure --prefix=$HOME/vim-$VIM_VERSION && make && make install; fi)
 
 cache:
   directories:
@@ -14,8 +13,8 @@ cache:
     - $HOME/vim-7.4.1151
 
 env:
-  - PATH=$HOME/vim-8.0.0000/bin/:$PATH
-  - PATH=$HOME/vim-7.4.1151/bin/:$PATH
+  - VIM_VERSION=8.0.0000 PATH=$HOME/vim-$VIM_VERSION/bin/:$PATH
+  - VIM_VERSION=7.4.1151 PATH=$HOME/vim-$VIM_VERSION/bin/:$PATH
 
 script:
   - /tmp/themis/bin/themis
