--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,14 @@ sudo: false
 
 install:
   - git clone --depth=1 https://github.com/thinca/vim-themis /tmp/themis
-  - git clone https://github.com/vim/vim $HOME/vim
-  - (if ! test -d $HOME/vim-$VIM_VERSION/bin; then cd $HOME/vim && git checkout . && git checkout v$VIM_VERSION && ./configure --prefix=$HOME/vim-$VIM_VERSION && make && make install; fi)
+  - (if ! test -d $HOME/vim-$VIM_VERSION/bin; then
+       git clone https://github.com/vim/vim $HOME/vim &&
+       cd $HOME/vim &&
+       git checkout v$VIM_VERSION &&
+       ./configure --prefix=$HOME/vim-$VIM_VERSION &&
+       make &&
+       make install;
+     fi)
 
 cache:
   directories:
