--- a/.travis.yml
+++ b/.travis.yml
@@ -18,9 +18,10 @@ cache:
     - $HOME/vim-$VIM_VERSION
 
 env:
-  - VIM_VERSION=8.0.0000 PATH=$HOME/vim-$VIM_VERSION/bin/:$PATH
-  - VIM_VERSION=7.4.1151 PATH=$HOME/vim-$VIM_VERSION/bin/:$PATH
+  - VIM_VERSION=8.0.0000
+  - VIM_VERSION=7.4.1151
 
 script:
+  - export PATH=$HOME/vim-$VIM_VERSION/bin:$PATH
   - vim --version
   - /tmp/themis/bin/themis --reporter spec
