--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -18,9 +18,9 @@ jobs:
         - v8.0.0000
     steps:
     - name: Checkout code
-      uses: actions/checkout@master
+      uses: actions/checkout@main
     - name: Checkout vim-themis
-      uses: actions/checkout@master
+      uses: actions/checkout@main
       with:
         repository: thinca/vim-themis
         path: vim-themis
